# jukebox

./: .gitignore  Cargo.toml  Dockerfile  elm.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
patches/: vite-plugin-mpa.patch
src/: main.rs
ui/: Bindings.elm  Const.elm  Const.prod.elm  Helpers.elm  Library.elm  Main.elm  utils.css
ui/pages/: index.html  main.js
ui/pages/index/: index.html  index.js
