[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elm_rs = "0.2.2"
mpd = { git = "https://github.com/kstep/rust-mpd.git" }
poem = { version = "3.1.1", features = ["websocket", "static-files"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
rayon = "1.10"
futures-util = "0.3"
r2d2 = "0.8"
once_cell = "1.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "std", "fmt", "env-filter" ] }

